JJ.TryThingsOut.EntityFramework: * Make tests inconclusive upon database connection failure. * Copy some helpers from JJ.Framework for that. * Also get rid of (ReSharper) warnings.

--- a/JJ.TryThingsOut.EntityFramework/TryEntityFramework.Tests/TryEntityFramework.Tests.csproj
+++ b/JJ.TryThingsOut.EntityFramework/TryEntityFramework.Tests/TryEntityFramework.Tests.csproj
@@ -57,6 +57,9 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Helpers\CollectionExtensions_Recursive_Ancestors.cs" />
+    <Compile Include="Helpers\ExceptionHelper.cs" />
+    <Compile Include="Helpers\AssertInconclusiveHelper.cs" />
     <Compile Include="Test_EntityFrameworkMappings_Temp.cs" />
     <Compile Include="Test_EntityFrameworkMappings.cs" />
     <Compile Include="Test_EntityFrameworkMappings_Original.cs" />
