TryEntityFramework: Try fix trip over C# 7

--- a/JJ.TryThingsOut.NPersist/TryNPersist.Model/TryNPersist.Model.csproj
+++ b/JJ.TryThingsOut.NPersist/TryNPersist.Model/TryNPersist.Model.csproj
@@ -4,7 +4,7 @@
     <ProjectType>Local</ProjectType>
     <ProductVersion>7.10.3077</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{06c582c3-da46-4ee4-83a5-201610ccbbe1}</ProjectGuid>
+    <ProjectGuid>{06C582C3-DA46-4EE4-83A5-201610CCBBE1}</ProjectGuid>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ApplicationIcon />
@@ -45,6 +45,7 @@
     <WarningLevel>4</WarningLevel>
     <DebugType>full</DebugType>
     <ErrorReport>prompt</ErrorReport>
+    <LangVersion>6</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <OutputPath>bin\Release\</OutputPath>
